tests/fail/uninit_byte_read.stderr
error: Undefined Behavior: constructing invalid value: encountered uninitialized bytes, but expected initialized bytes
  --> $DIR/uninit_byte_read.rs:LL:CC
   |
LL |     let undef = unsafe { *v.get_unchecked(5) };
   |                          ^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered uninitialized bytes, but expected initialized bytes
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/uninit_byte_read.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

